# vertebra-ref

./: .gitattributes  .gitignore  LICENSE  LICENSE.jquery  Makefile  Makefile.am  README  abstract.tex  backmatter.tex  configure.ac  foreword.tex  frontmatter.tex  interim.tex  intro.tex  ititle.tex  mainmatter.tex  preface.tex  title.tex  vertebra.tex
components/: avalanche.tex  cavalcade.tex  entrepot.tex  herault.tex  sawmill.tex
concepts/: actors.tex  agents.tex  audit.tex  auth.tex  dataflow.tex  datastore.tex  discovery.tex  impersonation.tex  resources.tex  roles.tex  workflow.tex
concepts/admin/: jobctl.tex  logs.tex  provisioning.tex
concepts/fed/: auth.tex  cache.tex  discovery.tex
concepts/op/: direct.tex  general.tex  intro.tex  pipe.tex  scope.tex
concepts/xmpp/: components.tex  iq.tex  overview.tex
figs/dot/: bank_model.dot  bobco1.dot  client_server.dot  op_states.dot  permtree1.dot  res_example2.twopi  test1.dot  test3.dot  test4.dot
html/: base.css  interact.js  workflow.css  workflow.html
math/: discovery.tex  entrepot.tex  resources.tex
proto/: advert.tex  direct.tex  general.tex  pipe.tex  retry.tex  xmpp.tex
src/: README  workflow.cmt  workflow.vwf  xml_to_pretty
src/html/: Makefile.am
src/html/src/: workflow.vwf
src/html/static/: base.css  interact.js  vwf.css
src/html/util/: xml_to_interactive_html
src/tex/: Makefile.am  abstract.tex  foreword.tex  frontmatter.tex  interim.tex  mainmatter.tex  preface.tex  vertebra.tex
src/tex/components/: avalanche.tex  cavalcade.tex  entrepot.tex
src/tex/concepts/: audit.tex  dataflow.tex
src/tex/concepts/admin/: logs.tex  provisioning.tex
src/tex/concepts/fed/: auth.tex
src/tex/concepts/op/: direct.tex  intro.tex
src/tex/concepts/xmpp/: components.tex  iq.tex
src/tex/figs/dot/: bank_model.dot  op_states.dot  test4.dot
src/tex/figs/omnigraffle/: perm_map1.graffle  res_example1.graffle
src/tex/math/: discovery.tex  entrepot.tex
src/tex/proto/: advert.tex  direct.tex  general.tex
src/tex/use/: fail.tex
use/: fail.tex  manage.tex  system.tex
